[tool.poetry]
name = "rpidiag"
version = "0.1.0"
description = "Small app to diagnose current status of a Raspberry Pi"
authors = ["Tomasz Wojdat <trivvz3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
coverage = "^5.5"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
tox = "^3.23.1"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
