[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.poetry]
name = "rpidiag"
version = "0.1.0"
description = "Small app to diagnose current status of a Raspberry Pi"
authors = ["Tomasz Wojdat <trivvz3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
tox = "^3.23.1"
pre-commit = "^2.13.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
